<resources>
    <string name="app_name">Frasa</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="get_started">"Get Started"</string>
    <string name="remember_me">Remember Me</string>
    <string name="welcome_bac">"Welcome\nBack!"</string>
</resources>
